--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ android/app/libs
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+react-native-packager-cache-*
+haste-map-react-*
